Add Akkado-to-Cedar bytecode compiler
Implement the semantic analyzer and code generator that bridge the
Akkado AST (from lexer/parser) to Cedar VM bytecode.

New components:
- builtins.hpp: Function-to-opcode mapping table (40+ builtins)
- symbol_table: Scoped symbol management with FNV-1a hashing
- analyzer: Pipe rewriting (a |> f(%) -> f(a)) and validation
- codegen: Buffer allocation, semantic ID generation, instruction emit

Now compiles:
- Literals and arithmetic operators
- Function calls (oscillators, filters, math, output)
- Pipe expressions with hole substitution
- Variable assignments and references

Deferred: closures, mini-notation patterns, method calls, named args

--- a/akkado/CMakeLists.txt
+++ b/akkado/CMakeLists.txt
@@ -40,6 +40,9 @@ add_library(akkado STATIC
     src/diagnostics.cpp
     src/lexer.cpp
     src/parser.cpp
+    src/symbol_table.cpp
+    src/analyzer.cpp
+    src/codegen.cpp
 )
 
 target_include_directories(akkado
