Add enkido-cli with SDL2 audio and interactive UI mode
- New unified CLI tool combining compilation and playback
- Modes: play, dump, compile, check, ui
- SDL2 audio backend with real-time callback
- Interactive UI mode with embedded bitmap font editor
- Line numbers, error highlighting, status bar
- Keyboard shortcuts: Shift+Enter (play), Escape (stop)
- Hot-swap program loading while playing
- Remove obsolete cedar-cli stub

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,9 +1,6 @@
 # CLI Tools
 
-if(ENKIDO_BUILD_CEDAR)
-    add_subdirectory(cedar-cli)
-endif()
-
 if(ENKIDO_BUILD_AKKADO)
     add_subdirectory(akkado-cli)
+    add_subdirectory(enkido-cli)
 endif()
