Fix web IDE compilation and audio playback
- Replace stub AudioWorklet processor with working WASM implementation
- Load WASM module via main thread and send to worklet via postMessage
- Patch Emscripten code to work in AudioWorklet context
- Fix Ctrl+Enter keybinding priority in CodeMirror
- Add auto-compile on play button when no program loaded
- Fix memory access patterns using getValue/setValue instead of HEAPU8
- Add proper error handling and compile status feedback

--- a/web/wasm/CMakeLists.txt
+++ b/web/wasm/CMakeLists.txt
@@ -9,14 +9,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Find parent project libraries
 # When building standalone, these paths need to be set
+set(ENKIDO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../..")
+
+# Include compiler options (defines enkido_compiler_options interface library)
+if(NOT TARGET enkido_compiler_options)
+    include("${ENKIDO_ROOT}/cmake/CompilerOptions.cmake")
+endif()
+
 if(NOT TARGET cedar)
-    # Try to find cedar in parent build
-    set(ENKIDO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../..")
     add_subdirectory("${ENKIDO_ROOT}/cedar" "${CMAKE_BINARY_DIR}/cedar")
 endif()
 
 if(NOT TARGET akkado)
-    set(ENKIDO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../..")
     add_subdirectory("${ENKIDO_ROOT}/akkado" "${CMAKE_BINARY_DIR}/akkado")
 endif()
 
@@ -36,40 +40,44 @@ if(EMSCRIPTEN)
         SUFFIX ".js"
     )
 
+    # Build exported functions list
+    set(ENKIDO_EXPORTED_FUNCTIONS
+        _cedar_init
+        _cedar_destroy
+        _cedar_set_sample_rate
+        _cedar_set_bpm
+        _cedar_set_crossfade_blocks
+        _cedar_load_program
+        _cedar_process_block
+        _cedar_get_output_left
+        _cedar_get_output_right
+        _cedar_reset
+        _cedar_is_crossfading
+        _cedar_crossfade_position
+        _cedar_has_program
+        _cedar_set_param
+        _cedar_set_param_slew
+        _akkado_compile
+        _akkado_get_bytecode
+        _akkado_get_bytecode_size
+        _akkado_get_diagnostic_count
+        _akkado_get_diagnostic_severity
+        _akkado_get_diagnostic_message
+        _akkado_get_diagnostic_line
+        _akkado_get_diagnostic_column
+        _akkado_clear_result
+        _enkido_get_block_size
+        _enkido_malloc
+        _enkido_free
+    )
+    list(JOIN ENKIDO_EXPORTED_FUNCTIONS "," ENKIDO_EXPORTED_FUNCTIONS_STR)
+
     target_link_options(enkido_wasm PRIVATE
         # Export C functions
-        -sEXPORTED_FUNCTIONS=[
-            '_cedar_init',
-            '_cedar_destroy',
-            '_cedar_set_sample_rate',
-            '_cedar_set_bpm',
-            '_cedar_set_crossfade_blocks',
-            '_cedar_load_program',
-            '_cedar_process_block',
-            '_cedar_get_output_left',
-            '_cedar_get_output_right',
-            '_cedar_reset',
-            '_cedar_is_crossfading',
-            '_cedar_crossfade_position',
-            '_cedar_has_program',
-            '_cedar_set_param',
-            '_cedar_set_param_slew',
-            '_akkado_compile',
-            '_akkado_get_bytecode',
-            '_akkado_get_bytecode_size',
-            '_akkado_get_diagnostic_count',
-            '_akkado_get_diagnostic_severity',
-            '_akkado_get_diagnostic_message',
-            '_akkado_get_diagnostic_line',
-            '_akkado_get_diagnostic_column',
-            '_akkado_clear_result',
-            '_enkido_get_block_size',
-            '_enkido_malloc',
-            '_enkido_free'
-        ]
+        "-sEXPORTED_FUNCTIONS=[${ENKIDO_EXPORTED_FUNCTIONS_STR}]"
 
         # Export runtime functions for memory access
-        -sEXPORTED_RUNTIME_METHODS=['ccall','cwrap','getValue','setValue','UTF8ToString','stringToUTF8','lengthBytesUTF8']
+        "-sEXPORTED_RUNTIME_METHODS=ccall,cwrap,getValue,setValue,UTF8ToString,stringToUTF8,lengthBytesUTF8"
 
         # Memory settings
         -sINITIAL_MEMORY=33554432  # 32MB initial
@@ -85,8 +93,8 @@ if(EMSCRIPTEN)
 
         # Module settings
         -sMODULARIZE=1
-        -sEXPORT_NAME='createEnkidoModule'
-        -sENVIRONMENT='web,worker'
+        "-sEXPORT_NAME=createEnkidoModule"
+        "-sENVIRONMENT=web,worker"
 
         # For AudioWorklet support
         -sAUDIO_WORKLET=1
