--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,8 @@
     "@codemirror/language": "^6.10.0",
     "@codemirror/state": "^6.4.0",
     "@codemirror/view": "^6.34.0",
-    "codemirror": "^6.0.0"
+    "codemirror": "^6.0.0",
+    "gray-matter": "^4.0.3",
+    "marked": "^17.0.1"
   }
 }
