Add F1 context-sensitive help with pre-built lookup index
- Add build script to generate docs lookup index from markdown files
- Use pre-built index for instant F1 help lookup (no async loading)
- Add heading IDs to markdown renderer for anchor scrolling
- Add event listener in SidePanel to open docs tab on F1
- Fix YAML frontmatter in pipes.md (quote special characters)
- Update CLAUDE.md with web app and docs workflow documentation

--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite dev",
-    "build": "bunx --bun vite build",
+    "build": "bun scripts/build-docs-index.ts && bunx --bun vite build",
+    "build:docs": "bun scripts/build-docs-index.ts",
     "preview": "bunx --bun vite preview",
     "check": "bunx svelte-kit sync && bunx svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "bunx svelte-kit sync && bunx svelte-check --tsconfig ./tsconfig.json --watch"
