Implement mini-notation parser and pattern evaluation
Add complete mini-notation support for pat(), seq(), timeline(), note()
constructs. Patterns like "bd sd [hh hh]" and "c4 e4 g4" are now parsed
at compile time into AST nodes and evaluated to event streams.

Features: pitch/sample tokens, rests, subdivisions [], sequences <>,
polyrhythms [a,b], euclidean rhythms x(3,8), modifiers (*n /n !n ?n @n),
and choice operator (a|b).

--- a/akkado/tests/CMakeLists.txt
+++ b/akkado/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(akkado_tests
     test_diagnostics.cpp
     test_lexer.cpp
     test_parser.cpp
+    test_mini_notation.cpp
 )
 
 target_link_libraries(akkado_tests
