--- a/web/package.json
+++ b/web/package.json
@@ -26,10 +26,12 @@
     "@codemirror/commands": "^6.7.0",
     "@codemirror/lang-javascript": "^6.2.0",
     "@codemirror/language": "^6.10.0",
+    "@codemirror/lint": "^6.9.2",
     "@codemirror/state": "^6.4.0",
     "@codemirror/view": "^6.34.0",
     "codemirror": "^6.0.0",
     "gray-matter": "^4.0.3",
+    "lucide-svelte": "^0.562.0",
     "marked": "^17.0.1"
   }
 }
