Pin Emscripten version to 4.0.11 in CI
The 'latest' Emscripten was generating different JS patterns that
broke the AudioWorklet processor's regex patching for WASM loading.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Emscripten
         uses: mymindstorm/setup-emsdk@v14
         with:
-          version: 'latest'
+          version: '4.0.11'
           actions-cache-folder: 'emsdk-cache'
 
       - name: Build WASM
