Add Python bindings and testing framework for Cedar DSP code
- Add pybind11 bindings exposing VM, Instruction, and Opcode enums to Python
- Enable position-independent code in cedar library for shared library linking
- Add CMake configuration for cedar_core Python module
- Add experiments directory with NumPy/Matplotlib-based testing suite
- Add test scripts for oscillators, filters, and effects with visualization
- Add wavetable generator script for additive synthesis and morphing

--- a/cedar/CMakeLists.txt
+++ b/cedar/CMakeLists.txt
@@ -45,6 +45,12 @@ target_link_libraries(cedar
         $<BUILD_INTERFACE:enkido_compiler_options>
 )
 
+# Enable position-independent code for linking into shared libraries (Python bindings)
+set_target_properties(cedar PROPERTIES POSITION_INDEPENDENT_CODE ON)
+
+# Add bindings
+add_subdirectory(bindings)
+
 # Alias for use in parent project
 add_library(enkido::cedar ALIAS cedar)
 
