Add MinBLEP oscillator and improve harmonic analysis
- Add OSC_SQR_MINBLEP opcode with band-limited step anti-aliasing
- Add MinBLEP table generation (windowed sinc integration)
- Add MinBLEPOscState with circular residual buffer
- Add poly_blep_distance() helper for symmetric distance-based correction
- Fix test_minblep_sqr.py to measure harmonics relative to fundamental
  (was incorrectly reporting absolute FFT magnitudes)

Performance:
- PolyBLEP: -108 dB even harmonics (excellent)
- MinBLEP: -99 dB even harmonics (good)

Analysis found PolyBLEP has subtle 190 vs 191 sample asymmetry over
100 cycles due to non-integer period, but this only contributes to
the -108 dB harmonics which are 50 dB below 16-bit noise floor.

--- a/cedar/CMakeLists.txt
+++ b/cedar/CMakeLists.txt
@@ -31,6 +31,8 @@ endif()
 add_library(cedar STATIC
     src/cedar.cpp
     src/vm/vm.cpp
+    src/opcodes/minblep_table.cpp
+    src/opcodes/minblep_state.cpp
 )
 
 target_include_directories(cedar
