Add automatic FM detection to upgrade oscillators to 4x
Detect FM synthesis patterns at compile time and automatically upgrade
basic oscillators (sin, saw, sqr, tri) to 4x oversampled variants when
frequency input comes from an audio-rate source.

- Add is_fm_modulated() to trace frequency buffer to audio-rate producers
- Recursively handles arithmetic ops to detect patterns like sin(100)*1000+440
- Add comprehensive test suite with 6 test cases covering FM detection

--- a/akkado/tests/CMakeLists.txt
+++ b/akkado/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ include(Catch)
 add_executable(akkado_tests
     test_akkado.cpp
     test_diagnostics.cpp
+    test_fm_detection.cpp
     test_lexer.cpp
     test_parser.cpp
     test_mini_notation.cpp
