Add DSP quality checklist and enable production Netlify deploys
- Add comprehensive DSP quality assurance checklist tracking test coverage
  for all Cedar opcodes across oscillators, filters, effects, envelopes,
  dynamics, and utility categories
- Document quality criteria and testing guidelines for each opcode type
- Track 25 tested vs 50 untested opcodes (33% coverage)
- Prioritize high-priority untested opcodes (ADSR, delay, compression, etc.)
- Enable production Netlify deploys in GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: nwtgck/actions-netlify@v3
         with:
           publish-dir: './web/build'
-          production-deploy: false
+          production-deploy: true
           deploy-message: "Dev: ${{ github.sha }}"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
