Fix WASM heap exhaustion by eliminating runtime allocations in StatePool
- Replace unordered_map/set with fixed-size arrays using open-addressing hash table
- Move FDNState delay buffers (80KB) to arena allocation
- Move DattorroState predelay buffer (19KB) to arena allocation
- Increase WASM memory limits (64MB initial, 512MB max)

The DSPState variant is now dominated by SamplerState (~768 bytes) instead of
FDNState (80KB), reducing the StatePool from ~650MB to ~6MB.

--- a/akkado/tests/CMakeLists.txt
+++ b/akkado/tests/CMakeLists.txt
@@ -22,6 +22,9 @@ add_executable(akkado_tests
     test_lexer.cpp
     test_parser.cpp
     test_mini_notation.cpp
+    test_ast_arena.cpp
+    test_buffer_allocator.cpp
+    test_symbol_table.cpp
 )
 
 target_link_libraries(akkado_tests
