Add comprehensive memory management and data structure tests
Cedar engine tests:
- AudioArena: bump allocator with SIMD alignment
- BufferPool: pre-allocated audio buffer registers
- StatePool: FNV-1a hash-based state storage with GC
- EnvMap: lock-free parameter hash table
- CrossfadeState: crossfade state machine
- SampleBank: sample registry
- Memory stress and concurrency tests

Akkado compiler tests:
- Fix BufferAllocator tests to use class-scoped constants
- Fix SymbolTable tests for correct scope depth and UserFunctionInfo API

Total: 129 test cases covering unit tests, edge cases, stress tests,
and thread safety.

--- a/cedar/tests/CMakeLists.txt
+++ b/cedar/tests/CMakeLists.txt
@@ -15,10 +15,27 @@ endif()
 
 include(Catch)
 
+# Option to enable concurrency tests (requires thread support)
+option(CEDAR_ENABLE_CONCURRENCY_TESTS "Enable thread safety tests" ON)
+
 add_executable(cedar_tests
     test_cedar.cpp
     test_vm.cpp
+    test_audio_arena.cpp
+    test_buffer_pool.cpp
+    test_state_pool.cpp
+    test_env_map.cpp
+    test_crossfade.cpp
+    test_sample_bank.cpp
+    test_memory_stress.cpp
 )
+
+# Add concurrency tests if enabled
+if(CEDAR_ENABLE_CONCURRENCY_TESTS)
+    target_sources(cedar_tests PRIVATE test_concurrency.cpp)
+    find_package(Threads REQUIRED)
+    target_link_libraries(cedar_tests PRIVATE Threads::Threads)
+endif()
 
 target_link_libraries(cedar_tests
     PRIVATE
