Add first-class functions and arrays with immutable variables
- Add ArrayInfo, CaptureInfo, FunctionRef structs to symbol table
- Extend SymbolKind with Array and FunctionValue types
- Implement define_array() and define_function_value() methods
- Add immutability check (E150 error for variable reassignment)
- Detect and register array/lambda assignments in analyzer
- Allow read-only captures in closures and fn definitions
- Update len() to support array variables (E141 for non-arrays)
- Handle Array symbols in codegen with multi-buffer propagation
- Add resolve_function_arg() to resolve lambdas, variables, fn names
- Add apply_function_ref() to apply functions with capture binding
- Update map() to accept function variables, not just inline lambdas
- Add comprehensive test cases for first-class values

--- a/akkado/CMakeLists.txt
+++ b/akkado/CMakeLists.txt
@@ -46,6 +46,7 @@ add_library(akkado STATIC
     src/symbol_table.cpp
     src/analyzer.cpp
     src/codegen.cpp
+    src/chord_parser.cpp
 )
 
 target_include_directories(akkado
