--- a/akkado/tests/CMakeLists.txt
+++ b/akkado/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ include(Catch)
 
 add_executable(akkado_tests
     test_akkado.cpp
+    test_codegen.cpp
     test_diagnostics.cpp
     test_fm_detection.cpp
     test_lexer.cpp
