Refactor codegen.cpp: extract arrays and patterns to separate files
Split codegen.cpp from 2942 to 1221 lines (58% reduction) by extracting:

- codegen_arrays.cpp (628 lines): array HOFs (map, sum, fold, zipWith,
  zip, take, drop, reverse, range, repeat), multi-buffer support, and
  function application helpers

- codegen_patterns.cpp (541 lines): pattern handling (MiniLiteral,
  sample/pitch patterns, pattern references) and chord expansion

- arrays.hpp (118 lines): shared helpers (emit_zero, extract_call_args,
  finalize_array_result)

Also replaced 95-line if-else dispatch chain with 15-line dispatch table.

--- a/akkado/CMakeLists.txt
+++ b/akkado/CMakeLists.txt
@@ -46,6 +46,8 @@ add_library(akkado STATIC
     src/symbol_table.cpp
     src/analyzer.cpp
     src/codegen.cpp
+    src/codegen_arrays.cpp
+    src/codegen_patterns.cpp
     src/chord_parser.cpp
 )
 
