Refactor codegen.cpp: extract functions, match expressions, and FM detection
Extract user function handling, closure/match expression cases, and FM
detection helpers to separate files, reducing codegen.cpp from 1221 to
702 lines for improved maintainability.

- Remove dead osc() handler (stdlib now defines this via match)
- Move handle_len_call() to codegen_arrays.cpp
- Create codegen_functions.cpp with user function and pattern matching
- Extract FM detection to header-only fm_detection.hpp

--- a/akkado/CMakeLists.txt
+++ b/akkado/CMakeLists.txt
@@ -47,6 +47,7 @@ add_library(akkado STATIC
     src/analyzer.cpp
     src/codegen.cpp
     src/codegen_arrays.cpp
+    src/codegen_functions.cpp
     src/codegen_patterns.cpp
     src/chord_parser.cpp
 )
