Add lazy queryable patterns (Tidal-style PAT_QUERY/PAT_STEP)
Implement runtime pattern evaluation for mini-notation patterns:

- Add PatternOp enum and PatternNode struct for pattern bytecode
- Add PatternQueryState for inline pattern storage and query results
- Add PAT_QUERY opcode for block-rate pattern querying
- Add PAT_STEP opcode for stepping through query results
- Add PatternCompiler to convert mini-notation AST to PatternNode array
- Add deterministic randomness via splitmix64 for reproducible patterns
- Support ATOM, SILENCE, CAT, STACK, SLOWCAT, FAST, SLOW, EUCLID,
  DEGRADE, CHOOSE, REPLICATE, and WEIGHT pattern operations

This enables infinite patterns, lazy evaluation, and runtime pattern
modification without pre-expanding all events at compile time.

--- a/cedar/tests/CMakeLists.txt
+++ b/cedar/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(cedar_tests
     test_crossfade.cpp
     test_sample_bank.cpp
     test_memory_stress.cpp
+    test_pattern_query.cpp
 )
 
 # Add concurrency tests if enabled
