Add parameter exposure system with web UI integration
Backend (Akkado):
- Add param(), button(), toggle(), dropdown() builtins that emit ENV_GET
- Extract ParamDecl metadata at compile time for UI generation
- Store name, type, default/min/max, options, and source location

WASM exports:
- Add akkado_get_param_decl_count/name/type/default/min/max
- Add akkado_get_param_option_count/option for dropdowns
- Add source location exports for click-to-source

Web UI:
- Add ParamSlider, ParamButton, ParamToggle, ParamSelect components
- Add ParamsPanel container that renders controls based on type
- Integrate into SidePanel Controls tab
- Handle value preservation on hot-swap

--- a/akkado/CMakeLists.txt
+++ b/akkado/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(akkado STATIC
     src/codegen.cpp
     src/codegen_arrays.cpp
     src/codegen_functions.cpp
+    src/codegen_params.cpp
     src/codegen_patterns.cpp
     src/chord_parser.cpp
 )
