Add comprehensive test coverage and coverage tooling
Test coverage improvements:
- test_analyzer.cpp: New file with 48 assertions testing variable
  reassignment, function errors, field access, scope resolution,
  pipe transformations, user functions, and match expressions
- test_pattern_debug.cpp: New file with 53 assertions testing
  mini AST JSON serialization and sequence JSON serialization
- test_codegen.cpp: Extended with 250+ new assertions covering
  records, lambdas, match expressions, pattern transformations,
  HOFs, pipes, parameters, oscillators, and mini-notation patterns
- test_ast_arena.cpp: Added accessor tests for all Node types
- test_lexer.cpp: Added token accessor and helper tests
- test_mini_notation.cpp: Added mini token accessor tests
- test_symbol_table.cpp: Added RecordTypeInfo tests
- test_parser.cpp: Added error recovery tests

Coverage tooling:
- cmake/Coverage.cmake: CMake module for coverage flags
- CMakePresets.json: Added coverage preset
- scripts/coverage.sh: Script to build, test, and generate HTML report

Other fixes:
- akkado/src/diagnostics.cpp: Add JSON escaping for diagnostic output
- cedar/include/cedar/vm/audio_arena.hpp: Fix aligned_alloc size alignment

Final test count: 212 test cases with 82,469 assertions
Coverage: 57.4% lines, 65.7% functions (full project including cedar DSP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ option(ENKIDO_BUILD_TESTS "Build tests" ON)
 # Include CMake modules
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(CompilerOptions)
+include(Coverage)
 include(Dependencies)
 
 # Add components
