--- a/akkado/tests/CMakeLists.txt
+++ b/akkado/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ include(Catch)
 
 add_executable(akkado_tests
     test_akkado.cpp
+    test_analyzer.cpp
     test_codegen.cpp
     test_diagnostics.cpp
     test_fm_detection.cpp
@@ -25,6 +26,7 @@ add_executable(akkado_tests
     test_mini_notation.cpp
     test_ast_arena.cpp
     test_buffer_allocator.cpp
+    test_pattern_debug.cpp
     test_symbol_table.cpp
     test_chord.cpp
 )
